[package]
name = "wlb"
version = "0.1.0"
authors = ["Alex Eubanks <endeavor@rainbowsandpwnies.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
rlua = "0.17"
serde = { version="1.0", features=["derive"] }

[dependencies.winapi]
version = "0.3"
features = [
    "errhandlingapi",
    "libloaderapi",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "winbase",
    "winnt"
]

[lib]
name = "wlb"